--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="disciplina">Disciplina</string>
     <string name="professor">Professor</string>
     <string name="img_prof">Imagem do professor</string>
+    <string name="codprof">Codigo</string>
+    <string name="ano">Ano</string>
 </resources>
