--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="img_prof">Imagem do professor</string>
     <string name="codprof">Codigo</string>
     <string name="ano">Ano</string>
+    <string name="notas">Notas</string>
+    <string name="n1">N1</string>
+    <string name="n2">N2</string>
+    <string name="n3">N3</string>
+    <string name="m1">M1</string>
 </resources>
